fixed pagination container overlap with table

--- a/diller_service_dashboard/display_log/static/css/styles.css
+++ b/diller_service_dashboard/display_log/static/css/styles.css
@@ -7,7 +7,6 @@ body {
     overflow: hidden;
 }
 
-
 .sidebar {
     width: 250px;
     height: 100vh;
@@ -45,6 +44,7 @@ body {
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    padding-bottom: 50px;
 }
 
 .table-container {
@@ -52,8 +52,9 @@ body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    max-height: calc(100vh - 150px);
+    max-height: calc(100vh - 160px);
     position: relative;
+    padding-bottom: 100px;
 }
 
 .table-header {
@@ -64,7 +65,6 @@ body {
     background-color: white;
     padding-right: 15px;
 }
-
 
 .table-body {
     flex-grow: 1;
@@ -89,7 +89,6 @@ body {
     text-align: left;
     color: white;
     text-transform: uppercase;
-
 }
 
 .table thead tr th:first-child {
@@ -107,7 +106,6 @@ body {
     background-color: #495057;
     border-bottom: 1px solid #ddd;
     text-align: left;
-
 }
 
 .table td:first-child {
@@ -115,8 +113,6 @@ body {
     white-space: nowrap;
     padding-left: 20px;
 }
-
-
 
 .table tr:first-child td:first-child {
     border-top-left-radius: 8px;
@@ -134,7 +130,6 @@ body {
     border-bottom-right-radius: 8px;
 }
 
-
 .table td:last-child {
     padding-left: 10px;
 }
@@ -142,8 +137,6 @@ body {
 .table td:nth-child(4) {
     padding-left: 30px;
 }
-
-
 
 /* Pagination */
 .pagination-container {
